--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,5 +105,9 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": [
+    "D:/Projects/vercel/output"
+    // Add other files or directories to exclude if needed
+  ]
 }
